--- a/css/style.css
+++ b/css/style.css
@@ -279,16 +279,16 @@ footer{
     margin-right: 5px;
     width: 60px;
     height: 60px;
-    border: 1px solid rgb(154, 149, 149);;
+    border: 1px solid rgb(154, 149, 149);
     border-radius: 50%;
     text-align: center;
     color: rgb(154, 149, 149);
 
 }
 .social-media-icon:hover{
-    background: rgb(154, 149, 149);ff;
+    background: rgb(154, 149, 149);
     color: rgb(118, 86, 131);
-    box-shadow: 0 0 6px rgba(255, 251, 251, 0.845)
+    box-shadow: 0 0 6px rgba(255, 251, 251, 0.845);
 }
 
 .social-media-icon i{
